Bug 216981 - repling to an email crashes kmail
Summary: repling to an email crashes kmail
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.12.3
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-01 21:46 UTC by Danny Auble
Modified: 2010-03-31 14:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Danny Auble 2009-12-01 21:46:46 UTC
Application that crashed: kontact
Version of the application: 4.3.3
KDE Version: 4.3.3 (KDE 4.3.3)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-15-generic x86_64
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
I was just replying to an email, at first the wrong name showed up as recipient, I closed down that email and then tryed again.  That is when we cored. 

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#5  0x000000000dabd5e0 in ?? ()
#6  0x00007fd3143caa92 in KMCommand::slotStart() () from /usr/lib/libkmailprivate.so.4
#7  0x00007fd3143bc6c6 in KMCommand::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkmailprivate.so.4
#8  0x00007fd329bdfddc in QMetaObject::activate (sender=0xda8d860, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x3f04188) at kernel/qobject.cpp:3113
#9  0x00007fd329be4e1f in QSingleShotTimer::timerEvent (this=0xda8d860) at kernel/qtimer.cpp:298
#10 0x00007fd329bd9d83 in QObject::event (this=0xda8d860, e=0x2) at kernel/qobject.cpp:1075
#11 0x00007fd32a4eaefc in QApplicationPrivate::notify_helper (this=0x1f70bc0, receiver=0xda8d860, e=0x7fff5dcd87b0) at kernel/qapplication.cpp:4056
#12 0x00007fd32a4f21ce in QApplication::notify (this=0x7fff5dcd8b10, receiver=0xda8d860, e=0x7fff5dcd87b0) at kernel/qapplication.cpp:4021
#13 0x00007fd32b121e56 in KApplication::notify (this=0x7fff5dcd8b10, receiver=0xda8d860, event=0x7fff5dcd87b0) at ../../kdeui/kernel/kapplication.cpp:302
#14 0x00007fd329bcac2c in QCoreApplication::notifyInternal (this=0x7fff5dcd8b10, receiver=0xda8d860, event=0x7fff5dcd87b0) at kernel/qcoreapplication.cpp:610
#15 0x00007fd329bf5862 in QCoreApplication::sendEvent (this=0x1f58190) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#16 QTimerInfoList::activateTimers (this=0x1f58190) at kernel/qeventdispatcher_unix.cpp:572
#17 0x00007fd329bf325d in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:165
#18 0x00007fd323445bbe in g_main_dispatch (context=0x1f56fc0) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:1960
#19 IA__g_main_context_dispatch (context=0x1f56fc0) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2513
#20 0x00007fd323449588 in g_main_context_iterate (context=0x1f56fc0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2591
#21 0x00007fd3234496b0 in IA__g_main_context_iteration (context=0x1f56fc0, may_block=1) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2654
#22 0x00007fd329bf31a6 in QEventDispatcherGlib::processEvents (this=0x1f55b70, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#23 0x00007fd32a57f4be in QGuiEventDispatcherGlib::processEvents (this=0xd8529b0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#24 0x00007fd329bc9532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#25 0x00007fd329bc9904 in QEventLoop::exec (this=0x7fff5dcd8a50, flags=) at kernel/qeventloop.cpp:201
#26 0x00007fd329bcbab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#27 0x0000000000403f47 in _start ()

Reported using DrKonqi
Comment 1 Björn Ruberg 2009-12-06 19:59:22 UTC
Can you reproduce the problem by trying to answer on that mail again? Or has this happend only one time?
Comment 2 Danny Auble 2009-12-07 17:57:05 UTC
I haven't seen this expect for the one time.  If you want me to try something let me know.  But I haven't seen it happen since this time either.  I am guessing there may had been memory corruption some place and we just happened to crash here.  So the bt may not really be valid.
Comment 3 Björn Ruberg 2009-12-07 18:11:38 UTC
Well, kmail sometimes crashs reproduceable for me when opening or replying on certain mails. So reporting such crashes is perfectly "valid". 
But if you cannot reproduce your problem, no developer will be able to. So I'm closing this bug - it cannot be fixed. (Please don't mind the ugly word "invalid" :) )
Comment 4 Danny Auble 2009-12-10 00:40:22 UTC
OK, I have a reproducer now.  If you save the mail as something (Ctrl + S), but I did a right click and did the same option.  saved the email as /tmp/1.patch and then try to reply to the email afterwards and that will cause things to crash.  Restarting Kontact fixes the issue and allows me to reply, but if I save the email again then the crash reproduces every time I go through the steps.
Comment 5 Björn Ruberg 2009-12-10 00:47:56 UTC
Thanks! Confirmed. I can reproduce the crash now in KDE 4.3.3.
Comment 6 Danny Auble 2009-12-10 00:50:05 UTC
sweet!  I am now using 4.3.4 FYI.
Comment 7 Nicolas L. 2009-12-12 16:23:27 UTC
can you please install kdepim dbg package and post a new crash log please ?
Comment 8 Danny Auble 2009-12-14 18:09:17 UTC
Here you go.  I am surprised you are unable to reproduce this on your own, it happens every time for me.  Let me know if you need anymore dbg info.

Application: Kontact (kontact), signal: Segmentation fault
The current source language is "auto; currently c".
[Current thread is 1 (Thread 0x7fdb02f5c750 (LWP 30810))]

Thread 2 (Thread 0x7fdae1770910 (LWP 30993)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:220
#1  0x00007fdb00bc8462 in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x2f6b4a0, time=30000) at thread/qwaitcondition_unix.cpp:85
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x2f6b4a0, time=30000) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fdb00bbe4f2 in QThreadPoolThread::run (this=<value optimized out>) at concurrent/qthreadpool.cpp:140
#4  0x00007fdb00bc7445 in QThreadPrivate::start (arg=0x2f6b650) at thread/qthread_unix.cpp:188
#5  0x00007fdafa2d6a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#6  0x00007fdb005c97bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fdb02f5c750 (LWP 30810)):
[KCrash Handler]
#5  0x00000000050f4e90 in ?? ()
#6  0x00007fdaeb4abb52 in KMCommand::slotStart (this=0x51f0620) at ../../kmail/kmcommands.cpp:247
#7  0x00007fdaeb49c946 in KMCommand::qt_metacall (this=0x51f0620, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff6b21b7b0) at ./kmcommands.moc:86
#8  0x00007fdb00cc2ddc in QMetaObject::activate (sender=0x1bf1de0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x50f5648) at kernel/qobject.cpp:3113
#9  0x00007fdb00cc7e1f in QSingleShotTimer::timerEvent (this=0x1bf1de0) at kernel/qtimer.cpp:298
#10 0x00007fdb00cbcd83 in QObject::event (this=0x1bf1de0, e=0x2) at kernel/qobject.cpp:1075
#11 0x00007fdb015d1efc in QApplicationPrivate::notify_helper (this=0x1c0cbf0, receiver=0x1bf1de0, e=0x7fff6b21bdc0) at kernel/qapplication.cpp:4056
#12 0x00007fdb015d91ce in QApplication::notify (this=0x7fff6b21c120, receiver=0x1bf1de0, e=0x7fff6b21bdc0) at kernel/qapplication.cpp:4021
#13 0x00007fdb02208e56 in KApplication::notify (this=0x7fff6b21c120, receiver=0x1bf1de0, event=0x7fff6b21bdc0) at ../../kdeui/kernel/kapplication.cpp:302
#14 0x00007fdb00cadc2c in QCoreApplication::notifyInternal (this=0x7fff6b21c120, receiver=0x1bf1de0, event=0x7fff6b21bdc0) at kernel/qcoreapplication.cpp:610
#15 0x00007fdb00cd8862 in QCoreApplication::sendEvent (this=0x1bf4190) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#16 QTimerInfoList::activateTimers (this=0x1bf4190) at kernel/qeventdispatcher_unix.cpp:572
#17 0x00007fdb00cd625d in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:165
#18 0x00007fdafa527bbe in g_main_dispatch (context=0x1bf2fc0) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:1960
#19 IA__g_main_context_dispatch (context=0x1bf2fc0) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2513
#20 0x00007fdafa52b588 in g_main_context_iterate (context=0x1bf2fc0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2591
#21 0x00007fdafa52b6b0 in IA__g_main_context_iteration (context=0x1bf2fc0, may_block=1) at /build/buildd/glib2.0-2.22.2/glib/gmain.c:2654
#22 0x00007fdb00cd61a6 in QEventDispatcherGlib::processEvents (this=0x1bf1b70, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#23 0x00007fdb016664be in QGuiEventDispatcherGlib::processEvents (this=0x2ead7f0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#24 0x00007fdb00cac532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#25 0x00007fdb00cac904 in QEventLoop::exec (this=0x7fff6b21c060, flags=) at kernel/qeventloop.cpp:201
#26 0x00007fdb00caeab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#27 0x0000000000403f47 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../kontact/src/main.cpp:218
The current source language is "auto; currently asm".
The current source language is "auto; currently c".
Comment 9 Sergio Martins 2010-03-31 14:08:12 UTC
SVN commit 1109534 by smartins:

Fwdport r1109520 by smartins from e35 to branch 4.4:

Don't crash when trying to reply after saving a message.

Fixes kolab/issue3099.

BUG: 216981


 M  +9 -1      kmcommands.cpp  
 M  +1 -0      kmcommands.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1109534