Fwdport r1109520 by smartins from e35 to branch 4.4:

Don't crash when trying to reply after saving a message.

Fixes kolab/issue3099.

BUG: 216981

svn path=/branches/KDE/4.4/kdepim/; revision=1109534