kmail/kmcommands.cpp
@@ -891,9 +891,16 @@ void KMSaveMsgCommand::slotSaveDataReq()
     KMMsgDict::instance()->getLocation( mMsgList[mMsgListIndex], &p, &idx );
     assert( p );
     assert( idx >= 0 );
+
+    const bool alreadyGot = p->isMessage( idx );
+
     msg = p->getMsg(idx);
 
     if ( msg ) {
+      // Only unGet the message if it isn't already got.
+      if ( !alreadyGot ) {
+        mUngetMsgs.append( msg );
+      }
       if ( msg->transferInProgress() ) {
         QByteArray data = QByteArray();
         mJob->sendAsyncData( data );
@@ -954,7 +961,8 @@ void KMSaveMsgCommand::slotMessageRetrievedForSaving(KMMessage *msg)
   }
   ++mMsgListIndex;
   // Get rid of the message.
-  if ( msg && msg->parent() && msg->getMsgSerNum() ) {
+  if ( msg && msg->parent() && msg->getMsgSerNum() &&
+       mUngetMsgs.contains( msg ) ) {
     int idx = -1;
     KMFolder * p = 0;
     KMMsgDict::instance()->getLocation( msg, &p, &idx );
